<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="co.com.ceiba.mobile.pruebadeingreso.data.model.User" />
        <variable
            name="onCLick"
            type="io.reactivex.subjects.PublishSubject" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/contentCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text='@{user.name}'
                tool:text="Jhon doe" />

            <LinearLayout
                android:id="@+id/contentPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tool:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imagePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_local_phone_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/phone"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{user.phone}'
                    tool:text="1-770-736-8031 x56442" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_email_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/email"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text='@{user.email}'
                    tool:text="jhondoe@email.com" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/contentBtnViewPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                tool:ignore="RtlHardcoded">

                <Button
                    android:id="@+id/btn_view_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_view_posts"
                    android:textColor="@color/colorPrimary"
                    android:onClick='@{()->onCLick.onNext(user)}'/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</layout>