...
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TextView
                android:id="@+id/title"
                android:textColor="@color/colorPrimary"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@{post.title}'
                tool:text="sunt aut facere repellat provident occaecati excepturi optio reprehenderit"
                />

            <TextView
                android:id="@+id/body"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
...
