...
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            tools:ignore="UselessParent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_search"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>
...
